hopefully fixes horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -644,4 +644,8 @@ img {
     display: none;
   }
 
+  .body {
+    overflow-x:hidden;
+  }
+
 }
